fix: remove unused i18n from App.tsx in landing-page

--- a/landing-page/public/locales/ar/translation.json
+++ b/landing-page/public/locales/ar/translation.json
@@ -1,156 +1,156 @@
 {
-    "nav": {
-        "features": "الميزات",
-        "resources": "الموارد",
-        "blog": "المدونة",
-        "home": "الرئيسية",
-        "free_trial": "تجربة مجانية"
+  "nav": {
+    "features": "الميزات",
+    "resources": "الموارد",
+    "blog": "المدونة",
+    "home": "الرئيسية",
+    "free_trial": "تجربة مجانية"
+  },
+  "hero": {
+    "title_start": "أطلق العنان لإمكانات",
+    "title_end": "عملك",
+    "subtitle": "حل إدارة المخزون الذكي المدعوم بالذكاء الاصطناعي لأتمتة طلباتك وتعظيم أرباحك.",
+    "cta": "ابدأ الآن"
+  },
+  "stats": {
+    "shops": "متاجر مجهزة",
+    "transactions": "معاملات / شهر",
+    "satisfaction": "عملاء راضون",
+    "support": "دعم متاح"
+  },
+  "features": {
+    "title": "أدواتك اليومية",
+    "subtitle": "مجموعة كاملة من علامات التبويب لإدارة كل جانب من جوانب عملك.",
+    "dashboard": {
+      "title": "لوحة القيادة",
+      "desc": "نظرة عامة على نشاطك، وتنبيهات المخزون الحرجة، والوصول السريع إلى مساعد الذكاء الاصطناعي."
     },
-    "hero": {
-        "title_start": "أطلق العنان لإمكانات",
-        "title_end": "عملك",
-        "subtitle": "حل إدارة المخزون الذكي المدعوم بالذكاء الاصطناعي لأتمتة طلباتك وتعظيم أرباحك.",
-        "cta": "ابدأ الآن"
+    "products": {
+      "title": "المنتجات",
+      "desc": "إدارة المخزون، ومسح الباركود، والتنظيم حسب الفئات، وتقييم المخزون."
     },
-    "stats": {
-        "shops": "متاجر مجهزة",
-        "transactions": "معاملات / شهر",
-        "satisfaction": "عملاء راضون",
-        "support": "دعم متاح"
+    "pos": {
+      "title": "نقطة البيع",
+      "desc": "حاسب عملائك بسرعة، وأصدر إيصالات رقمية، وحدث المخزون في الوقت الفعلي."
     },
-    "features": {
-        "title": "أدواتك اليومية",
-        "subtitle": "مجموعة كاملة من علامات التبويب لإدارة كل جانب من جوانب عملك.",
-        "dashboard": {
-            "title": "لوحة القيادة",
-            "desc": "نظرة عامة على نشاطك، وتنبيهات المخزون الحرجة، والوصول السريع إلى مساعد الذكاء الاصطناعي."
-        },
-        "products": {
-            "title": "المنتجات",
-            "desc": "إدارة المخزون، ومسح الباركود، والتنظيم حسب الفئات، وتقييم المخزون."
-        },
-        "pos": {
-            "title": "نقطة البيع",
-            "desc": "حاسب عملائك بسرعة، وأصدر إيصالات رقمية، وحدث المخزون في الوقت الفعلي."
-        },
-        "suppliers": {
-            "title": "الموردون",
-            "desc": "دليل الموردين، وتاريخ الطلبات، والوصول إلى سوق \"زر-إلى-زر\"."
-        },
-        "orders": {
-            "title": "الطلبات",
-            "desc": "تتبع طلبات الشراء، واستلام البضائع، وتحديث المخزون تلقائيًا."
-        },
-        "accounting": {
-            "title": "المحاسبة",
-            "desc": "تتبع دقيق للمبيعات والمصروفات وحساب الربحية التلقائي حسب الفترة."
-        },
-        "clients": {
-            "title": "العملاء",
-            "desc": "قاعدة بيانات العملاء، وتاريخ الشراء، وأدوات الولاء المدمجة."
-        },
-        "settings": {
-            "title": "الإعدادات",
-            "desc": "تخصيص التطبيق، وإدارة المستخدمين، وتكوين متجرك."
-        }
+    "suppliers": {
+      "title": "الموردون",
+      "desc": "دليل الموردين، وتاريخ الطلبات، والوصول إلى سوق \"زر-إلى-زر\"."
     },
-    "showcase": {
-        "title": "الواجهة التي تغير كل شيء",
-        "subtitle": "تصميم نظيف، مصمم لتوفير وقتك.",
-        "app_interface": "واجهة التطبيق"
+    "orders": {
+      "title": "الطلبات",
+      "desc": "تتبع طلبات الشراء، واستلام البضائع، وتحديث المخزون تلقائيًا."
     },
-    "how_it_works": {
-        "title": "بداية سريعة",
-        "subtitle": "ثلاث خطوات بسيطة لتحويل تجارتك.",
-        "step1": {
-            "title": "أنشئ حسابك",
-            "desc": "حمل التطبيق وقم بإعداد متجرك في أقل من دقيقتين."
-        },
-        "step2": {
-            "title": "امسح منتجاتك",
-            "desc": "استخدم كاميرا هاتفك لإضافة مخزونك بسرعة."
-        },
-        "step3": {
-            "title": "بع و تتبع",
-            "desc": "قم بأول مبيعاتك وشاهد إحصائياتك ترتفع في الوقت الفعلي."
-        }
+    "accounting": {
+      "title": "المحاسبة",
+      "desc": "تتبع دقيق للمبيعات والمصروفات وحساب الربحية التلقائي حسب الفترة."
     },
-    "testimonials": {
-        "title": "هم يثقون بنا",
-        "subtitle": "اكتشف كيف يساعد Stockman التجار يوميًا.",
-        "t1": "منذ استخدام Stockman، لم أعد أخسر المال بسبب نفاد المخزون. الذكاء الاصطناعي ينبهني دائمًا في الوقت المناسب!",
-        "t2": "التطبيق بسيط للغاية. تعلمه موظفي في 10 دقائق. إدارة نقطة البيع مثالية.",
-        "t3": "أحذت السوق! يمكنني مقارنة الأسعار من موردي والطلب مباشرة. توفير هائل للوقت."
+    "clients": {
+      "title": "العملاء",
+      "desc": "قاعدة بيانات العملاء، وتاريخ الشراء، وأدوات الولاء المدمجة."
     },
-    "pricing": {
-        "title": "اختر خطتك",
-        "subtitle": "أسعار شفافة تتكيف مع حجم تجارتك.",
-        "month": "/شهر",
-        "popular": "شائع",
-        "starter": {
-            "name": "البداية",
-            "cta": "ابدأ",
-            "f1": "مستخدم واحد",
-            "f2": "ما يصل إلى 100 منتج",
-            "f3": "إدارة مخزون أساسية",
-            "f4": "سجل نقدي (POS)"
-        },
-        "business": {
-            "name": "أعمال",
-            "cta": "تجربة مجانية 14 يومًا",
-            "f1": "3 مستخدمين",
-            "f2": "منتجات غير محدودة",
-            "f3": "مساعد Stockman AI",
-            "f4": "المسوق والطلبات",
-            "f5": "تحليلات متقدمة"
-        },
-        "enterprise": {
-            "name": "مؤسسة",
-            "price": "سعر مخصص",
-            "cta": "اتصل بنا",
-            "f1": "مستخدمين غير محدودين",
-            "f2": "متاجر متعددة",
-            "f3": "API والتكامل",
-            "f4": "دعم مخصص 24/7",
-            "f5": "ذكاء اصطناعي مخصص"
-        }
-    },
-    "faq": {
-        "title": "أسئلة متكررة",
-        "q1": "هل يعمل بدون إنترنت؟",
-        "a1": "نعم، يعمل Stockman في وضع عدم الاتصال. تتم مزامنة بياناتك بمجرد العثور على اتصال.",
-        "q2": "هل بياناتي آمنة؟",
-        "a2": "بالتأكيد. نستخدم تشفيرًا على مستوى البنوك لحماية جميع معلوماتك التجارية."
-    },
-    "download": {
-        "title": "هل أنت مستعد للانتقال لمستوى اعلى ؟",
-        "subtitle": "انضم إلى آلاف التجار الذين قاموا بتحديث إدارتهم.",
-        "secure": "مدفوعات آمنة",
-        "support": "دعم محترف",
-        "updates": "تحديث مستمر"
-    },
-    "footer": {
-        "desc": "الحل الشامل للتجار العصريين في أفريقيا.",
-        "product": "المنتج",
-        "support": "الدعم",
-        "legal": "قانوني",
-        "help_center": "مركز المساعدة",
-        "contact": "اتصل",
-        "community": "المجتمع",
-        "privacy": "سياسة الخصوصية",
-        "terms": "شروط الخدمة",
-        "legal_notice": "إشعار قانوني",
-        "copyright": "© 2026 Stockman. جميع الحقوق محفوظة."
-    },
-    "newsletter": {
-        "title": "كن خبيرًا في الأسهم",
-        "desc": "انضم إلى أكثر من 5000 تاجر واحصل على دليلنا المجاني: \"10 أخطاء تقتل ربحيتك\".",
-        "placeholder": "بريدك الإلكتروني المهني...",
-        "cta": "احصل على الدليل",
-        "success": "شكرًا! تحقق من بريدك الوارد.",
-        "privacy": "لا بريد عشوائي. إلغاء الاشتراك بنقر واحدة."
-    },
-    "whatsapp": {
-        "message": "مرحبًا، أود معرفة المزيد عن Stockman!"
+    "settings": {
+      "title": "الإعدادات",
+      "desc": "تخصيص التطبيق، وإدارة المستخدمين، وتكوين متجرك."
     }
+  },
+  "showcase": {
+    "title": "الواجهة التي تغير كل شيء",
+    "subtitle": "تصميم نظيف، مصمم لتوفير وقتك.",
+    "app_interface": "واجهة التطبيق"
+  },
+  "how_it_works": {
+    "title": "بداية سريعة",
+    "subtitle": "ثلاث خطوات بسيطة لتحويل تجارتك.",
+    "step1": {
+      "title": "أنشئ حسابك",
+      "desc": "حمل التطبيق وقم بإعداد متجرك في أقل من دقيقتين."
+    },
+    "step2": {
+      "title": "امسح منتجاتك",
+      "desc": "استخدم كاميرا هاتفك لإضافة مخزونك بسرعة."
+    },
+    "step3": {
+      "title": "بع و تتبع",
+      "desc": "قم بأول مبيعاتك وشاهد إحصائياتك ترتفع في الوقت الفعلي."
+    }
+  },
+  "testimonials": {
+    "title": "هم يثقون بنا",
+    "subtitle": "اكتشف كيف يساعد Stockman التجار يوميًا.",
+    "t1": "منذ استخدام Stockman، لم أعد أخسر المال بسبب نفاد المخزون. الذكاء الاصطناعي ينبهني دائمًا في الوقت المناسب!",
+    "t2": "التطبيق بسيط للغاية. تعلمه موظفي في 10 دقائق. إدارة نقطة البيع مثالية.",
+    "t3": "أحذت السوق! يمكنني مقارنة الأسعار من موردي والطلب مباشرة. توفير هائل للوقت."
+  },
+  "pricing": {
+    "title": "اختر خطتك",
+    "subtitle": "أسعار شفافة تتكيف مع حجم تجارتك.",
+    "month": "/شهر",
+    "popular": "شائع",
+    "starter": {
+      "name": "البداية",
+      "cta": "ابدأ",
+      "f1": "مستخدم واحد",
+      "f2": "ما يصل إلى 100 منتج",
+      "f3": "إدارة مخزون أساسية",
+      "f4": "سجل نقدي (POS)"
+    },
+    "business": {
+      "name": "Pro",
+      "cta": "تجربة مجانية 3 أشهر",
+      "f1": "5 مستخدمين",
+      "f2": "منتجات غير محدودة",
+      "f3": "مساعد Stockman AI",
+      "f4": "المسوق والطلبات",
+      "f5": "تحليلات متقدمة"
+    },
+    "enterprise": {
+      "name": "مؤسسة",
+      "price": "سعر مخصص",
+      "cta": "اتصل بنا",
+      "f1": "مستخدمين غير محدودين",
+      "f2": "متاجر متعددة",
+      "f3": "API والتكامل",
+      "f4": "دعم مخصص 24/7",
+      "f5": "ذكاء اصطناعي مخصص"
+    }
+  },
+  "faq": {
+    "title": "أسئلة متكررة",
+    "q1": "هل يعمل بدون إنترنت؟",
+    "a1": "نعم، يعمل Stockman في وضع عدم الاتصال. تتم مزامنة بياناتك بمجرد العثور على اتصال.",
+    "q2": "هل بياناتي آمنة؟",
+    "a2": "بالتأكيد. نستخدم تشفيرًا على مستوى البنوك لحماية جميع معلوماتك التجارية."
+  },
+  "download": {
+    "title": "هل أنت مستعد للانتقال لمستوى اعلى ؟",
+    "subtitle": "انضم إلى آلاف التجار الذين قاموا بتحديث إدارتهم.",
+    "secure": "مدفوعات آمنة",
+    "support": "دعم محترف",
+    "updates": "تحديث مستمر"
+  },
+  "footer": {
+    "desc": "الحل الشامل للتجار العصريين في أفريقيا.",
+    "product": "المنتج",
+    "support": "الدعم",
+    "legal": "قانوني",
+    "help_center": "مركز المساعدة",
+    "contact": "اتصل",
+    "community": "المجتمع",
+    "privacy": "سياسة الخصوصية",
+    "terms": "شروط الخدمة",
+    "legal_notice": "إشعار قانوني",
+    "copyright": "© 2026 Stockman. جميع الحقوق محفوظة."
+  },
+  "newsletter": {
+    "title": "كن خبيرًا في الأسهم",
+    "desc": "انضم إلى أكثر من 5000 تاجر واحصل على دليلنا المجاني: \"10 أخطاء تقتل ربحيتك\".",
+    "placeholder": "بريدك الإلكتروني المهني...",
+    "cta": "احصل على الدليل",
+    "success": "شكرًا! تحقق من بريدك الوارد.",
+    "privacy": "لا بريد عشوائي. إلغاء الاشتراك بنقر واحدة."
+  },
+  "whatsapp": {
+    "message": "مرحبًا، أود معرفة المزيد عن Stockman!"
+  }
 }
