--- a/landing-page/public/locales/hi/translation.json
+++ b/landing-page/public/locales/hi/translation.json
@@ -1,156 +1,156 @@
 {
-    "nav": {
-        "features": "सुविधाएँ",
-        "resources": "संसाधन",
-        "blog": "ब्लॉग",
-        "home": "होम",
-        "free_trial": "निःशुल्क परीक्षण"
+  "nav": {
+    "features": "सुविधाएँ",
+    "resources": "संसाधन",
+    "blog": "ब्लॉग",
+    "home": "होम",
+    "free_trial": "निःशुल्क परीक्षण"
+  },
+  "hero": {
+    "title_start": "अपने व्यवसाय की क्षमता को",
+    "title_end": "अनलॉक करें",
+    "subtitle": "अपने ऑर्डर स्वचालित करने और मुनाफे को अधिकतम करने के लिए एआई-संचालित बुद्धिमान स्टॉक प्रबंधन समाधान।",
+    "cta": "अभी शुरू करें"
+  },
+  "stats": {
+    "shops": "सुसज्जित दुकानें",
+    "transactions": "लेनदेन / माह",
+    "satisfaction": "संतुष्ट ग्राहक",
+    "support": "समर्थन उपलब्ध"
+  },
+  "features": {
+    "title": "आपके दैनिक उपकरण",
+    "subtitle": "आपके व्यवसाय के हर पहलू को प्रबंधित करने के लिए टैब का एक पूरा सुइट।",
+    "dashboard": {
+      "title": "डैशबोर्ड",
+      "desc": "आपकी गतिविधि का अवलोकन, महत्वपूर्ण स्टॉक अलर्ट, और एआई सहायक तक त्वरित पहुंच।"
     },
-    "hero": {
-        "title_start": "अपने व्यवसाय की क्षमता को",
-        "title_end": "अनलॉक करें",
-        "subtitle": "अपने ऑर्डर स्वचालित करने और मुनाफे को अधिकतम करने के लिए एआई-संचालित बुद्धिमान स्टॉक प्रबंधन समाधान।",
-        "cta": "अभी शुरू करें"
+    "products": {
+      "title": "उत्पाद",
+      "desc": "इन्वेंटरी प्रबंधन, बारकोड स्कैनिंग, श्रेणी संगठन और स्टॉक मूल्यांकन।"
     },
-    "stats": {
-        "shops": "सुसज्जित दुकानें",
-        "transactions": "लेनदेन / माह",
-        "satisfaction": "संतुष्ट ग्राहक",
-        "support": "समर्थन उपलब्ध"
+    "pos": {
+      "title": "पीओएस",
+      "desc": "ग्राहकों को जल्दी से चेकआउट करें, डिजिटल रसीदें उत्पन्न करें, और वास्तविक समय में स्टॉक अपडेट करें।"
     },
-    "features": {
-        "title": "आपके दैनिक उपकरण",
-        "subtitle": "आपके व्यवसाय के हर पहलू को प्रबंधित करने के लिए टैब का एक पूरा सुइट।",
-        "dashboard": {
-            "title": "डैशबोर्ड",
-            "desc": "आपकी गतिविधि का अवलोकन, महत्वपूर्ण स्टॉक अलर्ट, और एआई सहायक तक त्वरित पहुंच।"
-        },
-        "products": {
-            "title": "उत्पाद",
-            "desc": "इन्वेंटरी प्रबंधन, बारकोड स्कैनिंग, श्रेणी संगठन और स्टॉक मूल्यांकन।"
-        },
-        "pos": {
-            "title": "पीओएस",
-            "desc": "ग्राहकों को जल्दी से चेकआउट करें, डिजिटल रसीदें उत्पन्न करें, और वास्तविक समय में स्टॉक अपडेट करें।"
-        },
-        "suppliers": {
-            "title": "आपूर्तिकर्ता",
-            "desc": "आपूर्तिकर्ता निर्देशिका, ऑर्डर इतिहास, और 'बटन-टू-बटन' बाज़ार तक पहुंच।"
-        },
-        "orders": {
-            "title": "ऑर्डर",
-            "desc": "खरीद ऑर्डर ट्रैक करें, माल प्राप्त करें, और स्वचालित रूप से स्टॉक अपडेट करें।"
-        },
-        "accounting": {
-            "title": "लेखा",
-            "desc": "बिक्री, व्यय, और अवधि के अनुसार स्वचालित लाभप्रदता गणना का सटीक ट्रैकिंग।"
-        },
-        "clients": {
-            "title": "ग्राहक",
-            "desc": "ग्राहक डेटाबेस, खरीद इतिहास, और एकीकृत वफादारी उपकरण।"
-        },
-        "settings": {
-            "title": "सेटिंग्स",
-            "desc": "ऐप अनुकूलन, उपयोगकर्ता प्रबंधन, और दुकान कॉन्फ़िगरेशन।"
-        }
+    "suppliers": {
+      "title": "आपूर्तिकर्ता",
+      "desc": "आपूर्तिकर्ता निर्देशिका, ऑर्डर इतिहास, और 'बटन-टू-बटन' बाज़ार तक पहुंच।"
     },
-    "showcase": {
-        "title": "इंटरफ़ेस जो सब कुछ बदल देता है",
-        "subtitle": "एक साफ डिज़ाइन, जिसे आपका समय बचाने के लिए बनाया गया है।",
-        "app_interface": "ऐप इंटरफ़ेस"
+    "orders": {
+      "title": "ऑर्डर",
+      "desc": "खरीद ऑर्डर ट्रैक करें, माल प्राप्त करें, और स्वचालित रूप से स्टॉक अपडेट करें।"
     },
-    "how_it_works": {
-        "title": "त्वरित शुरुआत",
-        "subtitle": "अपने व्यवसाय को बदलने के लिए तीन सरल चरण।",
-        "step1": {
-            "title": "खाता बनाएं",
-            "desc": "ऐप डाउनलोड करें और 2 मिनट से कम समय में अपनी दुकान कॉन्फ़िगर करें।"
-        },
-        "step2": {
-            "title": "उत्पादों को स्कैन करें",
-            "desc": "जल्दी से अपना स्टॉक जोड़ने के लिए अपने फोन के कैमरे का उपयोग करें।"
-        },
-        "step3": {
-            "title": "बेचें और ट्रैक करें",
-            "desc": "अपनी पहली बिक्री करें और वास्तविक समय में अपने आंकड़े चढ़ते हुए देखें।"
-        }
+    "accounting": {
+      "title": "लेखा",
+      "desc": "बिक्री, व्यय, और अवधि के अनुसार स्वचालित लाभप्रदता गणना का सटीक ट्रैकिंग।"
     },
-    "testimonials": {
-        "title": "वे हम पर भरोसा करते हैं",
-        "subtitle": "जानें कि स्टॉकमैन व्यापारियों की मदद कैसे करता है।",
-        "t1": "स्टॉकमैन का उपयोग करने के बाद से, स्टॉकआउट के कारण मुझे अब पैसे का नुकसान नहीं होता है। एआई हमेशा मुझे सही समय पर चेतावनी देता है!",
-        "t2": "ऐप इतना सरल है। मेरे कर्मचारियों ने इसे 10 मिनट में सीख लिया। पीओएस प्रबंधन एकदम सही है।",
-        "t3": "मुझे मार्केटप्लेस बहुत पसंद है! मैं अपने आपूर्तिकर्ताओं से कीमतों की तुलना कर सकता हूं और सीधे ऑर्डर कर सकता हूं। बहुत समय की बचत।"
+    "clients": {
+      "title": "ग्राहक",
+      "desc": "ग्राहक डेटाबेस, खरीद इतिहास, और एकीकृत वफादारी उपकरण।"
     },
-    "pricing": {
-        "title": "अपनी योजना चुनें",
-        "subtitle": "आपके व्यवसाय के आकार के अनुकूल पारदर्शी मूल्य।",
-        "month": "/माह",
-        "popular": "लोकप्रिय",
-        "starter": {
-            "name": "स्टार्टर",
-            "cta": "शुरू करें",
-            "f1": "1 उपयोगकर्ता",
-            "f2": "100 उत्पादों तक",
-            "f3": "बुनियादी स्टॉक प्रबंधन",
-            "f4": "कैश रजिस्टर (पीओएस)"
-        },
-        "business": {
-            "name": "व्यापार",
-            "cta": "14-दिन नि: शुल्क परीक्षण",
-            "f1": "3 उपयोगकर्ता",
-            "f2": "असीमित उत्पाद",
-            "f3": "स्टॉकमैन एआई सहायक",
-            "f4": "मार्केटप्लेस और ऑर्डर",
-            "f5": "उन्नत विश्लेषण"
-        },
-        "enterprise": {
-            "name": "उद्यम",
-            "price": "कस्टम कोट",
-            "cta": "संपर्क करें",
-            "f1": "असीमित उपयोगकर्ता",
-            "f2": "मल्टी-शॉप",
-            "f3": "एपीआई और एकीकरण",
-            "f4": "समर्पित 24/7 सहायता",
-            "f5": "कस्टम एआई"
-        }
-    },
-    "faq": {
-        "title": "अक्सर पूछे जाने वाले प्रश्न",
-        "q1": "क्या यह बिना इंटरनेट के काम करता है?",
-        "a1": "हाँ, स्टॉकमैन ऑफ़लाइन मोड में काम करता है। जैसे ही आपको कनेक्शन मिलता है, आपका डेटा सिंक हो जाता है।",
-        "q2": "क्या मेरा डेटा सुरक्षित है?",
-        "a2": "बिल्कुल। हम आपकी सभी व्यावसायिक जानकारी की सुरक्षा के लिए बैंक-स्तरीय एन्क्रिप्शन का उपयोग करते हैं।"
-    },
-    "download": {
-        "title": "अगले स्तर पर जाने के लिए तैयार हैं?",
-        "subtitle": "हजारों व्यापारियों से जुड़ें जिन्होंने अपने प्रबंधन को आधुनिक बनाया है।",
-        "secure": "सुरक्षित भुगतान",
-        "support": "प्रो समर्थन",
-        "updates": "निरंतर अपडेट"
-    },
-    "footer": {
-        "desc": "अफ्रीका में आधुनिक व्यापारियों के लिए ऑल-इन-वन समाधान।",
-        "product": "उत्पाद",
-        "support": "समर्थन",
-        "legal": "कानूनी",
-        "help_center": "सहायता केंद्र",
-        "contact": "संपर्क",
-        "community": "समुदाय",
-        "privacy": "गोपनीयता नीति",
-        "terms": "सेवा की शर्तें",
-        "legal_notice": "कानूनी नोटिस",
-        "copyright": "© 2026 स्टॉकमैन। सर्वाधिकार सुरक्षित।"
-    },
-    "newsletter": {
-        "title": "स्टॉक विशेषज्ञ बनें",
-        "desc": "5000+ व्यापारियों से जुड़ें और हमारी मुफ्त गाइड प्राप्त करें: \"10 गलतियाँ जो आपकी लाभप्रदता को मार रही हैं\"।",
-        "placeholder": "आपका व्यावसायिक ईमेल...",
-        "cta": "गाइड प्राप्त करें",
-        "success": "धन्यवाद! अपने इनबॉक्स की जाँच करें।",
-        "privacy": "कोई स्पैम नहीं। 1 क्लिक में सदस्यता समाप्त करें।"
-    },
-    "whatsapp": {
-        "message": "नमस्ते, मैं स्टॉकमैन के बारे में और जानना चाहूंगा!"
+    "settings": {
+      "title": "सेटिंग्स",
+      "desc": "ऐप अनुकूलन, उपयोगकर्ता प्रबंधन, और दुकान कॉन्फ़िगरेशन।"
     }
+  },
+  "showcase": {
+    "title": "इंटरफ़ेस जो सब कुछ बदल देता है",
+    "subtitle": "एक साफ डिज़ाइन, जिसे आपका समय बचाने के लिए बनाया गया है।",
+    "app_interface": "ऐप इंटरफ़ेस"
+  },
+  "how_it_works": {
+    "title": "त्वरित शुरुआत",
+    "subtitle": "अपने व्यवसाय को बदलने के लिए तीन सरल चरण।",
+    "step1": {
+      "title": "खाता बनाएं",
+      "desc": "ऐप डाउनलोड करें और 2 मिनट से कम समय में अपनी दुकान कॉन्फ़िगर करें।"
+    },
+    "step2": {
+      "title": "उत्पादों को स्कैन करें",
+      "desc": "जल्दी से अपना स्टॉक जोड़ने के लिए अपने फोन के कैमरे का उपयोग करें।"
+    },
+    "step3": {
+      "title": "बेचें और ट्रैक करें",
+      "desc": "अपनी पहली बिक्री करें और वास्तविक समय में अपने आंकड़े चढ़ते हुए देखें।"
+    }
+  },
+  "testimonials": {
+    "title": "वे हम पर भरोसा करते हैं",
+    "subtitle": "जानें कि स्टॉकमैन व्यापारियों की मदद कैसे करता है।",
+    "t1": "स्टॉकमैन का उपयोग करने के बाद से, स्टॉकआउट के कारण मुझे अब पैसे का नुकसान नहीं होता है। एआई हमेशा मुझे सही समय पर चेतावनी देता है!",
+    "t2": "ऐप इतना सरल है। मेरे कर्मचारियों ने इसे 10 मिनट में सीख लिया। पीओएस प्रबंधन एकदम सही है।",
+    "t3": "मुझे मार्केटप्लेस बहुत पसंद है! मैं अपने आपूर्तिकर्ताओं से कीमतों की तुलना कर सकता हूं और सीधे ऑर्डर कर सकता हूं। बहुत समय की बचत।"
+  },
+  "pricing": {
+    "title": "अपनी योजना चुनें",
+    "subtitle": "आपके व्यवसाय के आकार के अनुकूल पारदर्शी मूल्य।",
+    "month": "/माह",
+    "popular": "लोकप्रिय",
+    "starter": {
+      "name": "स्टार्टर",
+      "cta": "शुरू करें",
+      "f1": "1 उपयोगकर्ता",
+      "f2": "100 उत्पादों तक",
+      "f3": "बुनियादी स्टॉक प्रबंधन",
+      "f4": "कैश रजिस्टर (पीओएस)"
+    },
+    "business": {
+      "name": "Pro",
+      "cta": "3 माह निःशुल्क परीक्षण",
+      "f1": "5 उपयोगकर्ता",
+      "f2": "असीमित उत्पाद",
+      "f3": "स्टॉकमैन एआई सहायक",
+      "f4": "मार्केटप्लेस और ऑर्डर",
+      "f5": "उन्नत विश्लेषण"
+    },
+    "enterprise": {
+      "name": "उद्यम",
+      "price": "कस्टम कोट",
+      "cta": "संपर्क करें",
+      "f1": "असीमित उपयोगकर्ता",
+      "f2": "मल्टी-शॉप",
+      "f3": "एपीआई और एकीकरण",
+      "f4": "समर्पित 24/7 सहायता",
+      "f5": "कस्टम एआई"
+    }
+  },
+  "faq": {
+    "title": "अक्सर पूछे जाने वाले प्रश्न",
+    "q1": "क्या यह बिना इंटरनेट के काम करता है?",
+    "a1": "हाँ, स्टॉकमैन ऑफ़लाइन मोड में काम करता है। जैसे ही आपको कनेक्शन मिलता है, आपका डेटा सिंक हो जाता है।",
+    "q2": "क्या मेरा डेटा सुरक्षित है?",
+    "a2": "बिल्कुल। हम आपकी सभी व्यावसायिक जानकारी की सुरक्षा के लिए बैंक-स्तरीय एन्क्रिप्शन का उपयोग करते हैं।"
+  },
+  "download": {
+    "title": "अगले स्तर पर जाने के लिए तैयार हैं?",
+    "subtitle": "हजारों व्यापारियों से जुड़ें जिन्होंने अपने प्रबंधन को आधुनिक बनाया है।",
+    "secure": "सुरक्षित भुगतान",
+    "support": "प्रो समर्थन",
+    "updates": "निरंतर अपडेट"
+  },
+  "footer": {
+    "desc": "अफ्रीका में आधुनिक व्यापारियों के लिए ऑल-इन-वन समाधान।",
+    "product": "उत्पाद",
+    "support": "समर्थन",
+    "legal": "कानूनी",
+    "help_center": "सहायता केंद्र",
+    "contact": "संपर्क",
+    "community": "समुदाय",
+    "privacy": "गोपनीयता नीति",
+    "terms": "सेवा की शर्तें",
+    "legal_notice": "कानूनी नोटिस",
+    "copyright": "© 2026 स्टॉकमैन। सर्वाधिकार सुरक्षित।"
+  },
+  "newsletter": {
+    "title": "स्टॉक विशेषज्ञ बनें",
+    "desc": "5000+ व्यापारियों से जुड़ें और हमारी मुफ्त गाइड प्राप्त करें: \"10 गलतियाँ जो आपकी लाभप्रदता को मार रही हैं\"।",
+    "placeholder": "आपका व्यावसायिक ईमेल...",
+    "cta": "गाइड प्राप्त करें",
+    "success": "धन्यवाद! अपने इनबॉक्स की जाँच करें।",
+    "privacy": "कोई स्पैम नहीं। 1 क्लिक में सदस्यता समाप्त करें।"
+  },
+  "whatsapp": {
+    "message": "नमस्ते, मैं स्टॉकमैन के बारे में और जानना चाहूंगा!"
+  }
 }
