--- a/landing-page/public/locales/ru/translation.json
+++ b/landing-page/public/locales/ru/translation.json
@@ -1,156 +1,156 @@
 {
-    "nav": {
-        "features": "Функции",
-        "resources": "Ресурсы",
-        "blog": "Блог",
-        "home": "Главная",
-        "free_trial": "Бесплатная Проба"
+  "nav": {
+    "features": "Функции",
+    "resources": "Ресурсы",
+    "blog": "Блог",
+    "home": "Главная",
+    "free_trial": "Бесплатная Проба"
+  },
+  "hero": {
+    "title_start": "Раскройте потенциал вашего",
+    "title_end": "бизнеса",
+    "subtitle": "Умное решение для управления запасами на базе ИИ для автоматизации заказов и максимизации прибыли.",
+    "cta": "Начать Сейчас"
+  },
+  "stats": {
+    "shops": "Оборудованные Магазины",
+    "transactions": "Транзакции / Месяц",
+    "satisfaction": "Довольные Клиенты",
+    "support": "Поддержка Доступна"
+  },
+  "features": {
+    "title": "Ваши ежедневные инструменты",
+    "subtitle": "Полный набор вкладок для управления каждым аспектом вашего бизнеса.",
+    "dashboard": {
+      "title": "Дашборд",
+      "desc": "Обзор вашей активности, критические уведомления о запасах и быстрый доступ к ИИ-ассистенту."
     },
-    "hero": {
-        "title_start": "Раскройте потенциал вашего",
-        "title_end": "бизнеса",
-        "subtitle": "Умное решение для управления запасами на базе ИИ для автоматизации заказов и максимизации прибыли.",
-        "cta": "Начать Сейчас"
+    "products": {
+      "title": "Продукты",
+      "desc": "Управление инвентарем, сканирование штрих-кодов, организация по категориям и оценка запасов."
     },
-    "stats": {
-        "shops": "Оборудованные Магазины",
-        "transactions": "Транзакции / Месяц",
-        "satisfaction": "Довольные Клиенты",
-        "support": "Поддержка Доступна"
+    "pos": {
+      "title": "Касса (POS)",
+      "desc": "Быстро обслуживайте клиентов, создавайте цифровые чеки и обновляйте запасы в реальном времени."
     },
-    "features": {
-        "title": "Ваши ежедневные инструменты",
-        "subtitle": "Полный набор вкладок для управления каждым аспектом вашего бизнеса.",
-        "dashboard": {
-            "title": "Дашборд",
-            "desc": "Обзор вашей активности, критические уведомления о запасах и быстрый доступ к ИИ-ассистенту."
-        },
-        "products": {
-            "title": "Продукты",
-            "desc": "Управление инвентарем, сканирование штрих-кодов, организация по категориям и оценка запасов."
-        },
-        "pos": {
-            "title": "Касса (POS)",
-            "desc": "Быстро обслуживайте клиентов, создавайте цифровые чеки и обновляйте запасы в реальном времени."
-        },
-        "suppliers": {
-            "title": "Поставщики",
-            "desc": "Каталог поставщиков, история заказов и доступ к маркетплейсу 'Button-to-Button'."
-        },
-        "orders": {
-            "title": "Заказы",
-            "desc": "Отслеживайте заказы на закупку, принимайте товары и автоматически обновляйте запасы."
-        },
-        "accounting": {
-            "title": "Бухгалтерия",
-            "desc": "Точное отслеживание продаж, расходов и автоматический расчет прибыльности за период."
-        },
-        "clients": {
-            "title": "Клиенты",
-            "desc": "База данных клиентов, история покупок и встроенные инструменты лояльности."
-        },
-        "settings": {
-            "title": "Настройки",
-            "desc": "Настройка приложения, управление пользователями и конфигурация магазина."
-        }
+    "suppliers": {
+      "title": "Поставщики",
+      "desc": "Каталог поставщиков, история заказов и доступ к маркетплейсу 'Button-to-Button'."
     },
-    "showcase": {
-        "title": "Интерфейс, который меняет все",
-        "subtitle": "Чистый дизайн, созданный для экономии вашего времени.",
-        "app_interface": "Интерфейс Приложения"
+    "orders": {
+      "title": "Заказы",
+      "desc": "Отслеживайте заказы на закупку, принимайте товары и автоматически обновляйте запасы."
     },
-    "how_it_works": {
-        "title": "Быстрый Старт",
-        "subtitle": "Три простых шага для трансформации вашего бизнеса.",
-        "step1": {
-            "title": "Создайте Аккаунт",
-            "desc": "Скачайте приложение и настройте свой магазин менее чем за 2 минуты."
-        },
-        "step2": {
-            "title": "Сканируйте Продукты",
-            "desc": "Используйте камеру телефона для быстрого добавления запасов."
-        },
-        "step3": {
-            "title": "Продавайте и Следите",
-            "desc": "Совершайте первые продажи и наблюдайте за ростом статистики в реальном времени."
-        }
+    "accounting": {
+      "title": "Бухгалтерия",
+      "desc": "Точное отслеживание продаж, расходов и автоматический расчет прибыльности за период."
     },
-    "testimonials": {
-        "title": "Они доверяют нам",
-        "subtitle": "Узнайте, как Stockman помогает торговцам каждый день.",
-        "t1": "С тех пор как я использую Stockman, я больше не теряю деньги из-за нехватки товара. ИИ всегда предупреждает меня в нужное время!",
-        "t2": "Приложение очень простое. Мои сотрудники освоили его за 10 минут. Управление кассой идеально.",
-        "t3": "Обожаю маркетплейс! Могу сравнивать цены поставщиков и заказывать напрямую. Огромная экономия времени."
+    "clients": {
+      "title": "Клиенты",
+      "desc": "База данных клиентов, история покупок и встроенные инструменты лояльности."
     },
-    "pricing": {
-        "title": "Выберите свой план",
-        "subtitle": "Прозрачные цены, адаптированные к размеру вашего бизнеса.",
-        "month": "/месяц",
-        "popular": "Популярный",
-        "starter": {
-            "name": "Стартер",
-            "cta": "Начать",
-            "f1": "1 Пользователь",
-            "f2": "До 100 продуктов",
-            "f3": "Базовое управление запасами",
-            "f4": "Кассовый аппарат (POS)"
-        },
-        "business": {
-            "name": "Бизнес",
-            "cta": "14 дней бесплатно",
-            "f1": "3 Пользователя",
-            "f2": "Безлимитные продукты",
-            "f3": "Ассистент Stockman ИИ",
-            "f4": "Маркетплейс и Заказы",
-            "f5": "Продвинутая аналитика"
-        },
-        "enterprise": {
-            "name": "Предприятие",
-            "price": "По запросу",
-            "cta": "Связаться",
-            "f1": "Безлимитные пользователи",
-            "f2": "Мульти-магазины",
-            "f3": "API и Интеграции",
-            "f4": "Выделенная поддержка 24/7",
-            "f5": "Кастомный ИИ"
-        }
-    },
-    "faq": {
-        "title": "Часто задаваемые вопросы",
-        "q1": "Работает ли без интернета?",
-        "a1": "Да, Stockman работает в офлайн-режиме. Ваши данные синхронизируются, как только появится сеть.",
-        "q2": "Безопасны ли мои данные?",
-        "a2": "Абсолютно. Мы используем шифрование банковского уровня для защиты всей вашей коммерческой информации."
-    },
-    "download": {
-        "title": "Готовы к следующему уровню?",
-        "subtitle": "Присоединяйтесь к тысячам торговцев, которые модернизировали свое управление.",
-        "secure": "Безопасные Платежи",
-        "support": "Про Поддержка",
-        "updates": "Постоянные обновления"
-    },
-    "footer": {
-        "desc": "Решение все-в-одном для современных торговцев в Африке.",
-        "product": "Продукт",
-        "support": "Поддержка",
-        "legal": "Юридическое",
-        "help_center": "Центр помощи",
-        "contact": "Контакт",
-        "community": "Сообщество",
-        "privacy": "Политика конфиденциальности",
-        "terms": "Условия использования",
-        "legal_notice": "Правовое уведомление",
-        "copyright": "© 2026 Stockman. Все права защищены."
-    },
-    "newsletter": {
-        "title": "Станьте Экспертом по Запасам",
-        "desc": "Присоединяйтесь к 5000+ торговцам и получите наш бесплатный гид: \"10 ошибок, убивающих вашу прибыль\".",
-        "placeholder": "Ваш рабочий email...",
-        "cta": "Получить Гид",
-        "success": "Спасибо! Проверьте входящие.",
-        "privacy": "Нет спама. Отписка в 1 клик."
-    },
-    "whatsapp": {
-        "message": "Здравствуйте, я хотел бы узнать больше о Stockman!"
+    "settings": {
+      "title": "Настройки",
+      "desc": "Настройка приложения, управление пользователями и конфигурация магазина."
     }
+  },
+  "showcase": {
+    "title": "Интерфейс, который меняет все",
+    "subtitle": "Чистый дизайн, созданный для экономии вашего времени.",
+    "app_interface": "Интерфейс Приложения"
+  },
+  "how_it_works": {
+    "title": "Быстрый Старт",
+    "subtitle": "Три простых шага для трансформации вашего бизнеса.",
+    "step1": {
+      "title": "Создайте Аккаунт",
+      "desc": "Скачайте приложение и настройте свой магазин менее чем за 2 минуты."
+    },
+    "step2": {
+      "title": "Сканируйте Продукты",
+      "desc": "Используйте камеру телефона для быстрого добавления запасов."
+    },
+    "step3": {
+      "title": "Продавайте и Следите",
+      "desc": "Совершайте первые продажи и наблюдайте за ростом статистики в реальном времени."
+    }
+  },
+  "testimonials": {
+    "title": "Они доверяют нам",
+    "subtitle": "Узнайте, как Stockman помогает торговцам каждый день.",
+    "t1": "С тех пор как я использую Stockman, я больше не теряю деньги из-за нехватки товара. ИИ всегда предупреждает меня в нужное время!",
+    "t2": "Приложение очень простое. Мои сотрудники освоили его за 10 минут. Управление кассой идеально.",
+    "t3": "Обожаю маркетплейс! Могу сравнивать цены поставщиков и заказывать напрямую. Огромная экономия времени."
+  },
+  "pricing": {
+    "title": "Выберите свой план",
+    "subtitle": "Прозрачные цены, адаптированные к размеру вашего бизнеса.",
+    "month": "/месяц",
+    "popular": "Популярный",
+    "starter": {
+      "name": "Стартер",
+      "cta": "Начать",
+      "f1": "1 Пользователь",
+      "f2": "До 100 продуктов",
+      "f3": "Базовое управление запасами",
+      "f4": "Кассовый аппарат (POS)"
+    },
+    "business": {
+      "name": "Pro",
+      "cta": "3 месяца бесплатно",
+      "f1": "5 Пользователей",
+      "f2": "Безлимитные продукты",
+      "f3": "Ассистент Stockman ИИ",
+      "f4": "Маркетплейс и Заказы",
+      "f5": "Продвинутая аналитика"
+    },
+    "enterprise": {
+      "name": "Предприятие",
+      "price": "По запросу",
+      "cta": "Связаться",
+      "f1": "Безлимитные пользователи",
+      "f2": "Мульти-магазины",
+      "f3": "API и Интеграции",
+      "f4": "Выделенная поддержка 24/7",
+      "f5": "Кастомный ИИ"
+    }
+  },
+  "faq": {
+    "title": "Часто задаваемые вопросы",
+    "q1": "Работает ли без интернета?",
+    "a1": "Да, Stockman работает в офлайн-режиме. Ваши данные синхронизируются, как только появится сеть.",
+    "q2": "Безопасны ли мои данные?",
+    "a2": "Абсолютно. Мы используем шифрование банковского уровня для защиты всей вашей коммерческой информации."
+  },
+  "download": {
+    "title": "Готовы к следующему уровню?",
+    "subtitle": "Присоединяйтесь к тысячам торговцев, которые модернизировали свое управление.",
+    "secure": "Безопасные Платежи",
+    "support": "Про Поддержка",
+    "updates": "Постоянные обновления"
+  },
+  "footer": {
+    "desc": "Решение все-в-одном для современных торговцев в Африке.",
+    "product": "Продукт",
+    "support": "Поддержка",
+    "legal": "Юридическое",
+    "help_center": "Центр помощи",
+    "contact": "Контакт",
+    "community": "Сообщество",
+    "privacy": "Политика конфиденциальности",
+    "terms": "Условия использования",
+    "legal_notice": "Правовое уведомление",
+    "copyright": "© 2026 Stockman. Все права защищены."
+  },
+  "newsletter": {
+    "title": "Станьте Экспертом по Запасам",
+    "desc": "Присоединяйтесь к 5000+ торговцам и получите наш бесплатный гид: \"10 ошибок, убивающих вашу прибыль\".",
+    "placeholder": "Ваш рабочий email...",
+    "cta": "Получить Гид",
+    "success": "Спасибо! Проверьте входящие.",
+    "privacy": "Нет спама. Отписка в 1 клик."
+  },
+  "whatsapp": {
+    "message": "Здравствуйте, я хотел бы узнать больше о Stockman!"
+  }
 }
